<resources>
    <string name="app_name">NavigationDrawerDemo</string>
    <string name="person">Person</string>
    <string name="home">Home</string>
    <string name="extra">Extra</string>
    <string name="offer">Offer</string>
    <string name="wallet">Wallet</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="synch">Synch</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
</resources>