<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"/>
        <item android:id="@+id/message"
            android:icon="@drawable/baseline_message_24"
            android:title="@string/message"/>
        <item android:id="@+id/synch"
            android:icon="@drawable/baseline_sync_24"
            android:title="@string/synch"/>

        <item android:id="@+id/trash"
            android:icon="@drawable/baseline_restore_from_trash_24"
            android:title="@string/trash"/>

        <item android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"/>

    </group>
    <item android:title="@string/profile">
        <menu>
            <item android:id="@+id/logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"/>
        </menu>
    </item>
    <item android:title="@string/communication">
        <menu>
            <item android:id="@+id/share"
                android:icon="@drawable/baseline_share_24"
                android:title="@string/share"/>
            <item android:id="@+id/rateus"
                android:icon="@drawable/baseline_rate_review_24"
                android:title="@string/rate_us"/>
        </menu>
    </item>
</menu>